examples/valid/program58.c
const int MAX = 100;

int main(void) {
    int x;
    x = MAX;
    return x;
}

