examples/invalid/program6.c
int main(void) {
    if (x > 0) 
        return 1;
    }
    return 0;
}

